enhance change password REQ:pak adam
