# storage/api-docs/api-docs.json
@@ -344,7 +344,7 @@
                 ]
             }
         },
-        "/change-password": {
+        "/profile/change-password": {
             "put": {
                 "tags": [
                     "Configuration"
@@ -358,14 +358,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "parameters": [
-                    {
-                        "name": "username",
-                        "in": "query",
-                        "description": "Username",
-                        "required": true,
-                        "type": "string"
-                    },
+                "parameters": [ 
                     {
                         "name": "old_password",
                         "in": "query",
@@ -385,7 +378,12 @@
                     "200": {
                         "description": "successful"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
             }
         },
         "/company/get": {
